tests/baselines/reference/tsxAttributeResolution15.errors.txt
tests/cases/conformance/jsx/file.tsx(11,10): error TS2322: Type '{ prop1: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
  Property 'prop1' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
tests/cases/conformance/jsx/file.tsx(14,44): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    class BigGreeter extends React.Component<{ }, {}> {
        render() {
            return <div>Default hi</div>;
        }
        greeting: string;
    }
    
    // Error
    let a = <BigGreeter prop1="hello" />
             ~~~~~~~~~~
!!! error TS2322: Type '{ {|prop1|0|}: string; }' is not assignable to type '{|IntrinsicAttributes|1|} & {|IntrinsicClassAttributes|2|}<{|BigGreeter|3|}> & { {|children|4|}?: {|ReactNode|5|}; }'.
!!! error TS2322:   Property 'prop1' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<BigGreeter> & { children?: ReactNode; }'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:11:21
!!! annotated symbol 1 /.lib/react.d.ts:2367:15
!!! annotated symbol 2 /.lib/react.d.ts:2369:15
!!! annotated symbol 3 tests/cases/conformance/jsx/file.tsx:3:7
!!! annotated symbol 4 /.lib/react.d.ts:175:22
!!! annotated symbol 5 /.lib/react.d.ts:93:10
    
    // OK
    let b = <BigGreeter ref={(input) => { this.textInput = input; }} />
                                               ~~~~~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
    let c = <BigGreeter data-extra="hi" />